--- a/backend/package.json
+++ b/backend/package.json
@@ -13,23 +13,25 @@
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.4",
     "sequelize-cli": "^5.5.1",
+    "swagger": "^0.7.5",
     "swagger-express-mw": "^0.7.0",
     "swagger-ui": "^3.25.0",
     "swagger-ui-express": "^4.1.3",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "sequelize-automate": "^1.2.0",
-    "should": "^7.1.0",
-    "supertest": "^1.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "mocha": "^7.0.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sequelize-automate": "^1.2.0",
+    "should": "^7.1.0",
+    "supertest": "^1.0.0"
   },
   "scripts": {
     "start": "node app.js",
     "test": "swagger project test",
+    "testSync": "node ./test/testSync.js",
     "automate": "sequelize-automate -c \"./config/automate_config.js\""
   }
 }
